[package]
name                = "inky-frame"
readme              = "README.md"
authors             = [ "secfurry" ]
edition             = "2024"
license             = "MIT"
publish             = true
version             = "0.3.0"
keywords            = [ "picow", "embedded", "inkyframe", "pinorami", "sdcard" ]
categories          = [ "no-std", "embedded", "api-bindings", "multimedia::images" ]
repository          = "https://github.com/secfurry/inky-frame"
description         = "Driver and protocol library for InkyFrame devices with peripheral support."

[lib]
doc                 = true
name                = "inky_frame"
path                = "src/lib.rs"
test                = false
bench               = false
doctest             = false
edition             = "2024"
crate-type          = [ "lib" ]

[dependencies]
## Local Development Only
# rpsp                = { path = "../rpsp", default-features = false, features = [] }
#
rpsp                = { version = "0.2.0", default-features = false, features = [] }

[features]
default             = [ "rpsp/pico" ]
debug               = [ "rpsp/debug" ]
cyw                 = [ "rpsp/cyw", "rpsp/pico" ]
static              = []
static_large        = []

[package.metadata.docs.rs]
target              = [ "thumbv6m-none-eabi" ]
features            = [ "debug", "static", "static_large", "rpsp/cyw", "rpsp/debug", "rpsp/pico" ]
default-target      = "thumbv6m-none-eabi"
no-default-features = true
